[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tech-collect"
version = "0.1.0"
description = "技術ブログ自動収集・RAG要約・Notion投稿システム（A2Aマルチエージェント構成）"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "miyo" }]

dependencies = [
    # A2A Protocol
    "python-a2a>=0.5.0",
    # LLM / RAG
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-chroma>=0.2.0",
    "chromadb>=0.5.0",
    # LLM Providers
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "ollama>=0.4.0",
    # Web / API
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "httpx>=0.27.0",
    "feedparser>=6.0.0",
    # Notion
    "notion-client>=2.2.0",
    # Data
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    # CLI
    "click>=8.1.0",
    "rich>=13.9.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "eval_type_backport>=0.2.0; python_version < '3.10'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[project.scripts]
tech-collect = "src.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
